--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         </activity>
         <activity android:name=".PlatsActivity">
         </activity>
+        <activity android:name=".PlatDetailActivity"
+            android:theme="@style/MyTheme.Detail">
+        </activity>
     </application>
 
 </manifest>
