add timer for cooking. Need to fixe the time edit text

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity android:name=".PlatDetailActivity"
             android:theme="@style/MyTheme.Detail">
         </activity>
+        <activity android:name=".MinuteurActivity">
+        </activity>
     </application>
 
 </manifest>
